# records_management_budget

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  pyrightconfig.json  requirements.txt
Data/: budget_2025.csv
assets/data/: records_management_budget.csv
assets/data/Raw/: records_management_budget.csv
components/: charts.py
docs/: budget_visualization_prd.md  metadata_guide.md  page_data_structure.md  page_implementation_guide.md
pages/: 1_📊_메인대시보드.py  2_🏢_기관유형별분석.py  3_📈_사업유형별분석.py  4_🏢_기관별심층분석.py  5_📊_사업별Top10.py  5_📚_메타데이터가이드.py
src/: app.py
utils/: data_loader.py  data_processor.py  project_classifier.py
